[package]
name = "covalent"
version = "0.1.1"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"
description = "Modular, fast, open rendering engine"
license = "Apache-2.0"
repository = "https://github.com/thirdsgames/covalent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "^0.17.0"
