[package]
name = "covalent_gl"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"
default-run = "covalent_demo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
covalent = { path = "../covalent" } # , version = "*"
glium = "*"

[[bin]]
name = "covalent_demo"
path = "src/bin/demo.rs"
