[package]
name = "simple_example"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "OpenGL backend for the Covalent engine"
repository = "https://github.com/thirdsgames/covalent/tree/master/examples/simple_example"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
covalent = { path = "../../covalent", version = "^0.1.1" }
covalent_gl = { path = "../../covalent_gl", version = "^0.1.1" }
log = "0.4"
fern = "0.5"
chrono = "0.4"
